# cmdchatter

./: .gitignore  Cargo.toml  README.md  build-dna.sh
dna/cmdchat/: Cargo.toml
dna/cmdchat.dna.workdir/: dna.json
dna/cmdchat/src/: lib.rs
src/: main.rs
