[package]
name = "cmdchat"
version = "0.1.0"
authors = ["Connor Turland <connorturland@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "=1.0.104"
hdk3 = {git = "https://github.com/holochain/holochain.git", rev = "bf21c837f450f606fb87cf5746c1ea15d8ba0ca2", package = "hdk3"}
derive_more = "0.99.9"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[profile.release]
opt-level = "z"